# Chip-8_Emulator

./: CMakeLists.txt  README.md  main.cpp  ressources.md
.github/workflows/: cmake-multi-platform.yml
